<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/list"
        android:title="@string/list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/plus"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

</menu>
